CI/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-deploy
  namespace: nestjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-deploy
  template:
    metadata:
      labels:
        app: nestjs-deploy
    spec:
      containers:
      - name: nestjs-demo
        image: jsadev/nestjs-demo:release
        ports:
        - containerPort: 3000
          protocol: TCP
          port: 443
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 500Mi
