CI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
  labels:
    app: nestjs-service
  namespace: nestjs
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: nestjs-deploy
  type: ClusterIP
